remove apibearerauth decorators in controllers
since we are now using cookies session storage
